--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "FoodShare Roster",
   "short_name": "FoodShare",
   "description": "Weekly Food Prep & Sharing Roster Management",
-  "start_url": "./",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4f46e5",
