--- a/manifest.json
+++ b/manifest.json
@@ -10,14 +10,14 @@
   "scope": "./",
   "icons": [
     {
-      "src": "./assets/kc-icon.jpeg",
+      "src": "./assets/kc-icon-192.png",
       "sizes": "192x192",
-      "type": "image/jpeg"
+      "type": "image/png"
     },
     {
-      "src": "./assets/kc-icon.jpeg",
+      "src": "./assets/kc-icon-512.png",
       "sizes": "512x512",
-      "type": "image/jpeg"
+      "type": "image/png"
     }
   ]
 }
